<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/linearLayoutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black"
        android:padding="20dp"

        >
        <TextView
            android:id="@+id/txtStudentEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_education"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/txtStudEduDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_edu_description"
            android:textColor="@color/white"
            />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMaths"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:id="@+id/linearLayoutMaths"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@color/teal_200"
                >
                <TextView
                    android:id="@+id/txtMaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maths"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/txtMathsDesc"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/maths_desc"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/btnMaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more"
                    android:onClick="onPressMaths"
                    />
            </LinearLayout>
            <include layout = "@layout/subject1"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPhysics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:id="@+id/linearLayoutPhysics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@color/purple_500"
                >
                <TextView
                    android:id="@+id/txtPhysics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/physics"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/txtPhysicsDesc"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/physics_desc"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/btnPhysics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more"
                    android:onClick="onPressPhysics"
                    />
            </LinearLayout>
            <include layout = "@layout/subject2"/>
        </androidx.cardview.widget.CardView>





        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewChemistry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:id="@+id/linearLayoutChemistry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@color/orange"
                >
                <TextView
                    android:id="@+id/txtChemistry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chemistry"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/txtChemistryDesc"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_description"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/btnChemistry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more"
                    android:onClick="onPressChemistry"
                    />
            </LinearLayout>
            <include layout = "@layout/subject3"/>
        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBiology"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:id="@+id/linearLayoutBiology"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@color/yellow"
                >
                <TextView
                    android:id="@+id/txtBiology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biology"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/txtBiologyDesc"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_description"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/btnBiology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more"
                    android:onClick="onPressBiology"
                    />
            </LinearLayout>
            <include layout = "@layout/subject4"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewGeography"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:id="@+id/linearLayoutGeography"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@color/green"
                >
                <TextView
                    android:id="@+id/txtGeography"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geography"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/txtGeographyDesc"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_description"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/btnGeography"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more"
                    android:onClick="onPressGeography"
                    />
            </LinearLayout>
            <include layout = "@layout/subject5"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewFrench"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:id="@+id/linearLayoutFrench"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@color/pink"

                >
                <TextView
                    android:id="@+id/txtFrench"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/french"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/txtFrenchDesc"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_description"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/btnFrench"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more"
                    android:onClick="onPressFrench"
                    />
            </LinearLayout>
            <include layout = "@layout/subject6"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>